Fixed field label not showing up if WYMEditor widget is used
git-svn-id: http://django-page-cms.googlecode.com/svn/trunk@175 439a9e5f-3f3e-0410-bc46-71226ad0111b

--- a/pages/media/pages/wymeditor/skins/django/skin.css
+++ b/pages/media/pages/wymeditor/skins/django/skin.css
@@ -35,7 +35,7 @@
 
 
 /*WYM_BOX*/
-        .wym_skin_django                { border: 0px; background: #fff; padding: 10px}
+        .wym_skin_django                { border: 0px; background: none; padding: 10px}
 
     /*auto-clear the wym_box*/
         .wym_skin_django:after 	        { content: "."; display: block; height: 0; clear: both; visibility: hidden; }
